<resources>
    <string name="app_name">Расписание</string>

    <integer name="com_vk_sdk_AppId">4333469</integer>
    <string name="sibsutis_life_Id">-34213539</string>

    <!-- Navigation Drawer-->
    <string name="info_schedule">Расписание</string>
    <string name="info_tasks">Задания</string>
    <string name="info_news">Новости</string>

    <!-- Array for type lesson-->
    <string-array name="type_lesson_list">
        <item>Лекция</item>
        <item>Практика</item>
        <item>Лабораторная</item>
        <item>Экзамен</item>
    </string-array>

    <!-- Array for type week-->
    <string-array name="type_week_list">
        <item>Каждую</item>
        <item>Чётная</item>
        <item>Нечётная</item>
    </string-array>

    <!-- Array for day week-->
    <string-array name="day_week_list">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>

    <!-- Array for mounts-->
    <string-array name="mount_list">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>

    <!-- add new lesson-->
    <string name="time_lesson">Время</string>
    <string name="name_lesson">Название предмета</string>
    <string name="fio_teacher">ФИО Преподавателя</string>
    <string name="number_auditory">Аудитория</string>
    <string name="type_lesson">Тип занятия</string>
    <string name="type_week">Тип недели</string>
    <string name="button_save">Сохранить</string>

    <!-- default lesson time-->
    <string-array name="type_lesson_time">
        <item>08:00</item>
        <item>09:50</item>
        <item>11:40</item>
        <item>13:45</item>
        <item>15:35</item>
        <item>17:25</item>
    </string-array>

    <!-- button edit_schedule-->
    <string name="edit_schedule">Изменить расписание</string>

    <!-- cardView item task show info-->
    <string name="lesson">Предмет</string>
    <string name="info">Задание</string>
    <string name="time">Срок выполнения</string>
    <string name="toast_choose_subject">Выберите предмет!</string>
    <string name="toast_choose_time">Выберите время!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="ok">ОК</string>
    <string name="lesson_begin">Начало занятия</string>
    <string name="proceed">Далее</string>
    <string name="lesson_end">Конец занятия</string>
    <string name="back">Назад</string>
    <string name="wrong_interval">Указан неверный интервал!</string>
    <string name="accept">Подтвердить</string>
    <string name="button_delete">Удалить</string>

    <string name="complete_task">Завершить</string>
    <string name="edit_task">Редактировать</string>

    <!-- item_lesson_show_info layout-->
    <string name="title_number_auditory">Номер аудитории</string>
    <string name="title_name_teacher">Преподаватель</string>


        <string name="format_date" formatted="false">%d %s %d</string>
    <string name="text_set">Задать...</string>
    <string name="title_title">Title Title Title Title Title</string>
    <string name="completed">Задача была отечена как выполненная и удалена.</string>
    <string name="title_time">time time time time time</string>
    <string name="no_task_in_the_past">Устанавливать срок выполнения в прошлом бессмысленно.</string>
    <string name="title_text">text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</string>

</resources>
