<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/item_time"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/margin5"
        android:text="@string/time_lesson"
        android:textSize="@dimen/text_size_item_lesson"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_type_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_nextto_time"
        android:layout_marginRight="@dimen/margin_nextto_auditory"
        android:layout_marginTop="@dimen/margin5"
        android:layout_toRightOf="@id/item_time"
        android:background="@color/primary"
        android:text="@string/type_lesson"
        android:textColor="@color/md_white_1000"
        android:textSize="@dimen/text_size_item_lesson" />

    <TextView
        android:id="@+id/item_name_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_type_lesson"
        android:layout_marginLeft="@dimen/margin_left_nextto_time"
        android:layout_marginRight="@dimen/margin_nextto_auditory"
        android:layout_marginTop="@dimen/margin5"
        android:layout_toRightOf="@+id/item_time"
        android:text="@string/name_lesson"
        android:textSize="@dimen/text_size_item_lesson"
        android:textColor="@color/md_black_1000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_fio_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_name_lesson"
        android:layout_marginLeft="@dimen/margin_left_nextto_time"
        android:layout_marginRight="@dimen/margin_nextto_auditory"
        android:layout_marginTop="@dimen/margin5"
        android:layout_toRightOf="@id/item_time"
        android:text="@string/fio_teacher"
        android:textSize="@dimen/text_size_item_lesson" />

    <TextView
        android:id="@+id/item_number_auditory"
        android:layout_width="@dimen/margin_nextto_auditory"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/margin5"
        android:text="@string/number_auditory"
        android:textSize="@dimen/text_size_item_lesson_auditory"
        android:textStyle="bold" />

</RelativeLayout>