<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/show_lesson_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_lesson_show"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin5"
        card_view:cardCornerRadius="@dimen/cardRadius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_lesson"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/header4"/>

            <TextView
                android:id="@+id/time_lesson_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin16"
                android:layout_marginTop="@dimen/margin16"
                android:text="@string/time_lesson"
                android:textSize="@dimen/text_size_time"
                />

            <TextView
                android:id="@+id/type_lesson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/time_lesson_show"
                android:layout_marginLeft="@dimen/margin16"
                android:layout_marginTop="@dimen/margin16"
                android:text="@string/type_lesson"
                android:textSize="@dimen/text_size_for_type_name"
                />

            <TextView
                android:id="@+id/name_lesson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/type_lesson"
                android:layout_marginLeft="@dimen/margin16"
                android:layout_marginTop="@dimen/margin16"
                android:text="@string/lesson"
                android:textSize="@dimen/text_size_for_type_name"
                />

            <TextView
            android:id="@+id/title_auditory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_auditory"
            android:layout_below="@id/image_lesson"
            android:layout_marginLeft="@dimen/margin16"
            android:layout_marginTop="@dimen/margin16"
            />

            <TextView
                android:id="@+id/number_auditory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_auditory"
                android:layout_marginTop="@dimen/margin5"
                android:layout_marginLeft="@dimen/margin16"
                android:text="@string/title_number_auditory"
                />

            <TextView
                android:id="@+id/title_name_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_name_teacher"
                android:layout_below="@id/number_auditory"
                android:layout_marginLeft="@dimen/margin16"
                android:layout_marginTop="@dimen/margin16"
                />

            <TextView
                android:id="@+id/fio_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_name_teacher"
                android:layout_marginTop="@dimen/margin5"
                android:layout_marginLeft="@dimen/margin16"
                android:layout_marginBottom="@dimen/margin16"
                android:text="@string/fio_teacher"
                />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>

